--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "oxbat-dark",
   "displayName": "Oxbat Dark",
   "description": "Dark, highly contrasted VS Code theme based on ancient Oxbat things that have never happened",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "publisher": "EmilBabayan",
+  "icon": "images/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/Emil-babayan/oxbat-dark"
